Fixing width/height of page
because of stretching issues
also, the contentbackground image is built for nearly exactly the
dimensions it comes out to with this commit.

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,9 +14,9 @@ body
 
 .page-wrapper
 {
-	height:100%;
-	width:90%;
-	margin:0% 5%;
+	height:494px;
+	width:970px;
+	margin:0 auto;
 }
 
 .top-menu 
