--- a/css/custom.css
+++ b/css/custom.css
@@ -53,15 +53,19 @@ body
 
 .content-wrapper
 {
-	height:80%;
+	width: 100%;
+    padding-bottom: 40%;
 	background-image:url('../images/ContentBackground.png');
 	background-size: 105% 105%;
 	background-position: -110% 0%;
 	margin-top: 5px;
+
 }
 
 .content-bg
 {
+	position: absolute;
+	width: 100%;
 	height:100%;
 }
 
