--- a/css/custom.css
+++ b/css/custom.css
@@ -14,9 +14,9 @@ body
 
 .page-wrapper
 {
-	height:494px;
-	width:970px;
-	margin:0 auto;
+	height:100%;
+	width:90%;
+	margin:0% 5%;
 }
 
 .top-menu 
