--- a/css/custom.css
+++ b/css/custom.css
@@ -80,7 +80,28 @@ body
 	background-color: rgba(0,0,0,.9);
 	height:100%;
 }
-@font-face 
+.stredm-panel-container
+{
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+.select-container
+{
+	flex-direction: column;
+	flex:6;
+}
+.instructions-container
+{
+	flex-direction: column;
+	flex:8;
+}
+.button-container
+{
+	flex-direction: column;
+	flex:3;
+}
+@font-family-base 
 {
 	font-family:'test';
 	src:url('test.otf');
