jquery ui, autocomplete search, select panel
stredm select panel layout styled. replaced select/option boxes with a
text input box linked to jquery autocomplete widget. installed jquery
libraries locally

--- a/css/custom.css
+++ b/css/custom.css
@@ -122,3 +122,13 @@ body
 	font-family:'test';
 	src:url('test.otf');
 }
+.ui-autocomplete {
+	max-height: 200px;
+	max-width: 157px;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+input[type=text]
+{
+	
+}
