--- a/css/custom.css
+++ b/css/custom.css
@@ -72,25 +72,30 @@ body
 {
 	height: 98%;
 	padding: 1% 1% 0;
-	display:none;
 }
 .stredming
 {
 	background-color: rgba(0, 0, 0, 0.9);
     height: 100%;
+	display:none;
 }
 .stredming-header
 {
 	color: white;
+	margin:0;
+	padding:0;
 }
 .stredming-header h1
 {
 	margin:0;
 	padding:4% 5%;
+	font-size:150%;
 }
 .stredming-results
 {
-	height:100%;
+	height:87%;
+	margin:0;
+	padding:0;
 }
 .result
 {
