--- a/css/custom.css
+++ b/css/custom.css
@@ -59,7 +59,7 @@ body
 	background-image: url('../images/ContentBackground.png');
 	background-size: 105% 105%;
 	background-position: -110% 0%;
-	margin-top: 2.5%;
+	margin: 2.5% 0 0 0;
 }
 
 .content-bg
