--- a/css/custom.css
+++ b/css/custom.css
@@ -148,10 +148,10 @@ body
 .instructions-container
 {
 	color: #FFFFFF;
-	line-height: 356%;
-	margin: 2% 0% 9% 0%;
+	line-height: 344%;
+	margin: 0% 0% 7% 0%;
 	text-align: center;
-	font-size: 124.5%;
+	font-size: 1.55em;
 }
 .button-container
 {
