--- a/css/custom.css
+++ b/css/custom.css
@@ -26,7 +26,7 @@ body
 
 .top-menu 
 {
-    font-size: 255%;
+    font-size: 243%;
     margin: 0;
 }
 .site-name
@@ -36,7 +36,7 @@ body
 
 .links-menu
 {
-	padding:0;
+	margin: 3% 0% 0% 24%;
 }
 
 .content-wrapper
