--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@ html
 
 body
 {
-	background-image:url(../images/newrukes.jpg);
+	background-image:url(../images/bpm.jpg);
 	background-position:top center;
 	background-size:100% 100%;
 	background-repeat:no-repeat;
