--- a/css/custom.css
+++ b/css/custom.css
@@ -131,9 +131,13 @@ body
 }
 .select-text
 {
-	padding: 0;
-	color: white;
-	font-size: 152%;
+color: white;
+font-size: 2.1em;
+letter-spacing: 2px;
+font-family: 'test';
+font-weight: 700;
+margin: -1.5% 0% 0% 0%;
+padding: 0% 0% 0% 4%;
 }
 .select-form
 {
