--- a/css/ui-lightness/jquery-ui-1.10.3.custom.css
+++ b/css/ui-lightness/jquery-ui-1.10.3.custom.css
@@ -797,8 +797,8 @@ body .ui-tooltip {
 .ui-widget textarea,
 .ui-widget button {
 	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
-	font-size: 1.2em;
-	width: 86%;
+	font-size: 1em;
+}
 .ui-widget-content {
 	border: 1px solid #dddddd;
 	background: #eeeeee url(images/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x;
