--- a/css/ui-lightness/jquery-ui-1.10.3.custom.css
+++ b/css/ui-lightness/jquery-ui-1.10.3.custom.css
@@ -797,7 +797,8 @@ body .ui-tooltip {
 .ui-widget textarea,
 .ui-widget button {
 	font-family: Trebuchet MS,Tahoma,Verdana,Arial,sans-serif;
-	font-size: 1em;
+	font-size: 1.1em;
+	width: 89%
 }
 .ui-widget-content {
 	border: 1px solid #dddddd;
